<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtmobilename"
        android:layout_width="134dp"
        android:layout_height="102dp"
        android:layout_marginTop="92dp"
        android:text="@string/mobilename"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmobilecompany"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginTop="92dp"
        android:text="@string/company"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtmobileprice"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toEndOf="@+id/txtmobilename"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmobileprice"
        android:layout_width="112dp"
        android:layout_height="80dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:text="@string/price"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>