<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCB5DF"
    android:backgroundTint="#F5888DF1"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Name1"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#749C8585"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cnic"
        android:textAlignment="center"
        android:textColor="#0E0E0E"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/cnic"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:text="@string/phone"
        android:textAlignment="center"
        android:textColor="#171717"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/phone"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="116dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="60dp"
        android:text="@string/sgpa"
        android:textAlignment="center"
        android:textColor="#121111"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="113dp"
        android:layout_height="39dp"
        android:layout_marginBottom="112dp"
        android:text="@string/cgpa"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/save1"
        app:layout_constraintEnd_toStartOf="@+id/cgpa1"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:background="#749C8585"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/sgpa"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/cgpa1"
        android:layout_width="201dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="108dp"
        android:autofillHints=""
        android:background="#749C8585"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/save1"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/save1"
        android:layout_width="166dp"
        android:layout_height="51dp"
        android:layout_marginBottom="80dp"
        android:background="#0B0909"
        android:backgroundTint="#131212"
        android:onClick="start"
        android:text="@string/save"
        android:textColor="#FBFBFB"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="98dp"
        android:layout_height="33dp"
        android:text="@string/namer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/Name1"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <EditText
        android:id="@+id/sgpa"
        android:layout_width="191dp"
        android:layout_height="37dp"
        android:layout_marginBottom="44dp"
        android:autofillHints=""
        android:background="#749C8585"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cgpa1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <EditText
        android:id="@+id/cnic"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="#749C8585"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name1"
        app:layout_constraintVertical_bias="0.419"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>