<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCB5DF"
    android:backgroundTint="#F5888DF1"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Name1"
        android:layout_width="188dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/reg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:text="Reg_No"
        android:textAlignment="center"
        android:textColor="#0E0E0E"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/reg1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:text="Dept"
        android:textAlignment="center"
        android:textColor="#171717"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/dept1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="116dp"
        android:layout_height="37dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="#121111"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/email1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="113dp"
        android:layout_height="39dp"
        android:text="@string/cgpa"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/save1"
        app:layout_constraintEnd_toStartOf="@+id/cgpa1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/dept1"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/email1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/reg1"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextFields,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/cgpa1"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/save1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/email1"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/save1"
        android:layout_width="166dp"
        android:layout_height="51dp"
        android:background="#0B0909"
        android:backgroundTint="#131212"
        android:onClick="start"
        android:text="@string/save"
        android:textColor="#FBFBFB"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cgpa1"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="98dp"
        android:layout_height="33dp"
        android:text="@string/namer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/Name1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cgpa1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/dept1"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="SpeakableTextPresentCheck,TextFields" />

    <EditText
        android:id="@+id/reg1"
        android:layout_width="188dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/dept1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/Name1"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>